<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".SignUp_Customer"
    android:background="@drawable/gradient_background">

    <TextView
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_marginBottom="27dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/username_cust"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_buttons"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:paddingLeft="12sp"
        android:textColorHint="@color/white"
        android:layout_marginBottom="20dp"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/cust_email"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_buttons"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:paddingLeft="12sp"
        android:textColorHint="@color/white"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/cust_password"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_buttons"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:paddingLeft="12sp"
        android:textColorHint="@color/white"
        android:layout_marginBottom="20dp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/confirm_password_cust"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_buttons"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textColorHint="@color/white"
        android:paddingLeft="12sp"
        android:layout_marginBottom="20dp"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/sign_up_btn_cust"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_buttons_white"
        android:text="@string/sign_up"
        android:textColor="@color/d32966" />

</LinearLayout>