<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/gradient_background"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/shop2go"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/new_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_shop_save"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        />
</LinearLayout>