<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e7820e"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:contentDescription="@string/stop2go"
            android:src="@drawable/logo3"
            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
            app:layout_constraintEnd_toEndOf="@id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/menu_back" />

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/Transparency"
            android:contentDescription="@string/home"
            android:src="@drawable/home_button"
            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
            app:layout_constraintEnd_toStartOf="@+id/orders_button"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/menu_back" />

        <!--ImageButton
            android:id="@+id/cart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/Transparency"
            android:contentDescription="@string/cart"
            android:src="@drawable/cart_button"
            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
            app:layout_constraintStart_toEndOf="@+id/home_button"
            app:layout_constraintTop_toTopOf="@+id/menu_back" /-->

        <ImageButton
            android:id="@+id/orders_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/Transparency"
            android:contentDescription="@string/orders"
            android:src="@drawable/orders_button"
            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
            app:layout_constraintStart_toEndOf="@+id/home_button"
            app:layout_constraintTop_toTopOf="@+id/menu_back" />

        <ImageButton
            android:id="@+id/account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/Transparency"
            android:contentDescription="@string/accounts"
            android:src="@drawable/account_button"
            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
            app:layout_constraintEnd_toEndOf="@+id/menu_back"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/my_orders_button"
            app:layout_constraintTop_toTopOf="@+id/menu_back" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_text"
        app:layout_constraintVertical_bias="0.514" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/username_text"
        app:layout_constraintTop_toBottomOf="@+id/username_content"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/username_text"
        app:layout_constraintTop_toBottomOf="@+id/email_content"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/username_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#68606060"
        android:backgroundTint="#68606060"
        android:text="username"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/username_text"
        app:layout_constraintTop_toBottomOf="@+id/username_text" />

    <TextView
        android:id="@+id/email_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#68606060"
        android:backgroundTint="#68606060"
        android:text="email"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/email_text"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <TextView
        android:id="@+id/password_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#68606060"
        android:backgroundTint="#68606060"
        android:text="password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/email_text"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />

    <Button
        android:id="@+id/signout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#e7820e"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>