<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/new_gradient"
    tools:context=".CartPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:padding="8dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:contentDescription="@string/stop2go"
            android:src="@drawable/logo3"
            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
            app:layout_constraintEnd_toEndOf="@id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/menu_back" />

        <ImageButton
            android:id="@+id/account_button"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/Transparency"
            android:contentDescription="@string/accounts"
            android:src="@drawable/account_button"
            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
            app:layout_constraintEnd_toEndOf="@+id/menu_back"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/my_orders_button"
            app:layout_constraintTop_toTopOf="@+id/menu_back" />

        <ImageButton
            android:id="@+id/cart_button"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/Transparency"
            android:contentDescription="@string/cart"
            android:src="@drawable/cart_button"
            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
            app:layout_constraintStart_toEndOf="@+id/home_button"
            app:layout_constraintTop_toTopOf="@+id/menu_back" />

        <ImageButton
            android:id="@+id/orders_button"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/Transparency"
            android:contentDescription="@string/orders"
            android:src="@drawable/orders_button"
            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
            app:layout_constraintStart_toEndOf="@+id/home_button"
            app:layout_constraintTop_toTopOf="@+id/menu_back" />

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/Transparency"
            android:contentDescription="@string/home"
            android:src="@drawable/home_button"
            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
            app:layout_constraintEnd_toStartOf="@+id/orders_button"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/menu_back" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="My Cart"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="100dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/order"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/navy_rounded_buttons"
        android:text="order"
        android:textSize="13sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

</androidx.constraintlayout.widget.ConstraintLayout>